// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Piece"
      key="One Piece"
    >
      One Piece
    </GifGrid>
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    >
      Dragon Ball
    </GifGrid>
  </ol>
</Fragment>
`;

exports[`Pruebas en <GifExpertApp /> debe de mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <p>
      No hay resultados, realiza una búsqueda
    </p>
  </ol>
</Fragment>
`;
